[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peslearn"
version = "1.0.1"
authors = [{name = "Adam Abbott"}, {name = "Ian Beck"},]
description = "Automated Construction of Machine Learning Models of Molecular Potential Energy Surfaces."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
dependencies = [
    "numpy (>=1.24.4, <2.0.0)",
    "GPy>=1.9",
    "scikit-learn>=0.20",
    "pandas>=2.0",
    "hyperopt>=0.1.1",
    "cclib>=1.6",
    "torch==2.1.2",
    "joblib>=1.3.0",
    "qcelemental>=0.27.1",
    "qcengine>=0.26.0",
    "matplotlib",
]

[project.optional-dependencies]
docs = [
    "sphinx==1.2.3",
    "sphinxcontrib-napoleon",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "numpydoc",
]
tests = [
    "pytest-cov",
]